syntax = "proto3";
option go_package = "01-proto/echo";

service EchoServer {
	rpc Echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string response = 1;
}